--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,11 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
   <file>images/morphotree_icon.png</file>
+  <file>images/binrec_icon.png</file>
+  <file>images/binrec_unselect_icon.png</file>
+  <file>images/binrec_plus_icon.png</file>
+  <file>images/greyrec_icon.png</file>
+  <file>images/greyrec_unselect_icon.png</file>
+  <file>images/greyrec_plus_icon.png</file>  
 </qresource>
 </RCC>
