image Zoom by toolbar.

--- a/resources.qrc
+++ b/resources.qrc
@@ -10,5 +10,7 @@
   <file>images/inspect_node_minus.png</file>
   <file>images/inspect_node_plus.png</file>
   <file>images/node_selection_pixel_icon.png</file>
+  <file>images/image_zoom_in_icon.png</file>
+  <file>images/image_zoom_out_icon.png</file>
 </qresource>
 </RCC>
