--- a/resources.qrc
+++ b/resources.qrc
@@ -19,6 +19,7 @@
   <file>images/Remove_SplineCPs_icon.png</file>  
   <file>images/AddCP_icon.png</file>
   <file>images/DeleteCP_icon.png</file>
+  <file>images/DeleteMultiCP_icon.png</file>
   <file>images/saliency_icon.png</file>
   <file>images/color_icon.png</file>  
   <file>images/width_icon.png</file>
