Include rotate Morphotree Widget functionality.

--- a/resources.qrc
+++ b/resources.qrc
@@ -31,5 +31,6 @@
   <file>images/icicle_node_inclusion_icon.png</file>
   <file>images/icicle_node_removal_icon.png</file>
   <file>images/fit_to_widget_icon.png</file>
+  <file>images/rotate_icon.png</file>
 </qresource>
 </RCC>
