--- a/resources.qrc
+++ b/resources.qrc
@@ -20,6 +20,7 @@
   <file>images/AddCP_icon.png</file>
   <file>images/DeleteCP_icon.png</file>
   <file>images/DeleteMultiCP_icon.png</file>
+  <file>images/DeleteABranch_icon.png</file>
   <file>images/saliency_icon.png</file>
   <file>images/color_icon.png</file>  
   <file>images/width_icon.png</file>
