--- a/resources.qrc
+++ b/resources.qrc
@@ -36,5 +36,6 @@
   <file>images/rotate_CPs.png</file>
   <file>images/zoom_in_out.png</file>
   <file>images/select_descendants_icon.png</file>
+  <file>images/sync_morphotree_icon.png</file>
 </qresource>
 </RCC>
